index.html added once again

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
 <h1>"hello"</h1>
+<h2>internet is to slow</h2>
+ <a href="http://pravinhanchinal.com">pravin website</a>>
 </body>
 </html>
